--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="cabecalho">
-    <img class="cabecalho-imagem" src="perfil.jpg" alt="Foto de perfil">
+    <img class="cabecalho-imagem" src="/images/perfil.jpg" alt="Foto de perfil">
     <nav class="cabecalho-menu">
       <a class="cabecalho-menu-item" href="https://api.whatsapp.com/send?phone=5553991158093">WhatsApp</a>
       <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/renan-moraes-93b14711a/">LinkedIN</a>
@@ -62,6 +62,13 @@
       <p class="conteudo-secundario-texto"> Bacharel em Engenharia Civil Cursando MBA Data Science and Analytics pela USP/ESALQ, possuo vasta experiência em gerenciamento de E-commerce com decisões embasadas na análise de dados.<br>Possuo o Certificado Profissional Google Data Analyst, além de conhecimento nas linguagens Python, R e SQL, assim como experiência com o uso de ferramentas de visualização de dados e construção de dashboards como o PowerBI e Tableau. </p>
       
     </section>
+    <footer class="rodape">
+      <img class="logos" src="/images/python.png">
+      <img class="logos" src="/images/r.png">
+      <img class="logos" src="/images/pbi.png">
+      <img class="logos" src="/images/tableau.png">
+      
+    </footer>
   </main>
 </body>
 
