--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="cabecalho">
-    <img class="cabecalho-imagem" src="/images/perfil.jpg" alt="Foto de perfil">
+    <img class="cabecalho-imagem" src="/landingpage/images/perfil.jpg" alt="Foto de perfil">
     <nav class="cabecalho-menu">
       <a class="cabecalho-menu-item" href="https://api.whatsapp.com/send?phone=5553991158093">WhatsApp</a>
       <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/renan-moraes-93b14711a/">LinkedIN</a>
@@ -63,10 +63,10 @@
       
     </section>
     <footer class="rodape">
-      <img class="logos" src="/images/python.png">
-      <img class="logos" src="/images/r.png">
-      <img class="logos" src="/images/pbi.png">
-      <img class="logos" src="/images/tableau.png">
+      <img class="logos" src="/landingpage/images/python.png">
+      <img class="logos" src="/landingpage/images/r.png">
+      <img class="logos" src="/landingpage/images/pbi.png">
+      <img class="logos" src="/landingpage/images/tableau.png">
       
     </footer>
   </main>
