--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
     <footer class="rodape">
       <img class="logos" src="/landingpage/images/python.png">
-      <img class="logos" src="/landingpage/images/r.png">
+      <img class="logos" src="/landingpage/images/R.png">
       <img class="logos" src="/landingpage/images/pbi.png">
       <img class="logos" src="/landingpage/images/tableau.png">
       
