--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Projetos de análise de dados!">
   <title>Renan Moraes - Data Analyst</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="shortcut icon" href="/landingpage/images/data.png" type="image/x-icon">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
 </head>
 
